samples/_failures_safe/1761354310_9626c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd1f7beb.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
